--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Nov 30 15:09:51 EST 2021
-sdk.dir=C\:\\Users\\franc\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\madis\\AppData\\Local\\Android\\Sdk
